# DawnAI

./: .dockerignore  .gitignore  CMakeLists.txt  CMakeLists.txt.local  Dawn  Dockerfile  Dockerfile.Base  Dockerfile.binary  Dockerfile.worker  Makefile  README.md  WORKSPACE  build.sh  build_local.sh  run.sh  serve.sh  socket.py  test.sh
3rdparty_buildfiles/: curl.BUILD  gflag.BUILD  json.BUILD  torch.BUILD  websocketpp.BUILD
cmake/: ProtoBuf.cmake  ProtoBufPatch.cmake
dep/grpc/lib/: libaddress_sorting.so.7.0.0  libgpr.so.7.0.0  libgrpc++.so.1  libgrpc++.so.1.20.0  libgrpc++_cronet.so.1.20.0  libgrpc++_error_details.so.1  libgrpc++_error_details.so.1.20.0  libgrpc++_reflection.so.1.20.0  libgrpc++_unsecure.so.1  libgrpc++_unsecure.so.1.20.0  libgrpc.so.7.0.0  libgrpc_cronet.so.7.0.0  libgrpc_unsecure.so.7.0.0  libgrpcpp_channelz.so.1  libgrpcpp_channelz.so.1.20.0
dep/opencv4/lib/: libopencv_aruco.so.4.1.1  libopencv_bgsegm.so.4.1.1  libopencv_bioinspired.so.4.1.1  libopencv_calib3d.so.4.1.1  libopencv_ccalib.so.4.1.1  libopencv_cvv.so.4.1.1  libopencv_datasets.so.4.1.1  libopencv_dnn_objdetect.so.4.1.1  libopencv_dpm.so.4.1.1  libopencv_face.so.4.1.1  libopencv_flann.so.4.1.1  libopencv_fuzzy.so.4.1.1  libopencv_highgui.so.4.1.1  libopencv_line_descriptor.so.4.1.1  libopencv_ml.so.4.1.1  libopencv_objdetect.so.4.1.1  libopencv_optflow.so.4.1.1  libopencv_phase_unwrapping.so.4.1.1  libopencv_rgbd.so.4.1.1  libopencv_saliency.so.4.1.1  libopencv_shape.so.4.1.1  libopencv_stereo.so.4.1.1  libopencv_stitching.so.4.1.1  libopencv_structured_light.so.4.1.1  libopencv_superres.so.4.1.1  libopencv_surface_matching.so.4.1.1  libopencv_text.so.4.1.1  libopencv_tracking.so.4.1.1  libopencv_video.so.4.1.1  libopencv_videoio.so.4.1.1  libopencv_videostab.so.4.1.1  libopencv_xfeatures2d.so.4.1.1  libopencv_ximgproc.so.4.1.1  libopencv_xobjdetect.so.4.1.1  libopencv_xphoto.so.4.1.1
dep/openssl/lib/: libcrypto.so.1.0.0  libssl.so.1.0.0
dep/torch/test/: AlgorithmsTest  BinaryMatchImplTest  Dict_test  Dimname_test  GraphTest  List_test  MatchTest  NamedTensor_test  NeuralNetTest  SubgraphMatcherTest  TarjansImplTest  TensorImpl_test  TopoSortTest  apply_utils_test  atest  basic  (+100 more)
logs/: trace.txt
protos/: BUILD  converse_service.grpc.pb.cc  converse_service.grpc.pb.h  converse_service.pb.cc  converse_service.pb.h  converse_service.proto  image_classification_service.grpc.pb.cc  image_classification_service.grpc.pb.h  image_classification_service.pb.cc  image_classification_service.pb.h  image_classification_service.proto  image_recognition_service.grpc.pb.cc  image_recognition_service.grpc.pb.h  image_recognition_service.pb.cc  image_recognition_service.pb.h  image_recognition_service.proto  seq2seq_service.grpc.pb.cc  seq2seq_service.grpc.pb.h  seq2seq_service.pb.cc  seq2seq_service.pb.h  text_generator_service.proto
scripts/: build.sh  grpc.sh  install_opencv.sh
src/: BUILD  CMakeLists.txt  main.cpp  server.cpp
src/engines/specific/: BUILD  InferenceBlob.hpp  InferenceEngine.hpp  OpenVinoEngine.hpp  TorchEngine.cpp  TorchEngine.hpp
src/lib/: BUILD  DawnAI.cpp  DawnAI.hpp  ImageClassifier.cpp  ImageClassifier.hpp  ImageInference.cpp  ImageInference.hpp  KeyWordDetector.cpp  KeyWordDetector.hpp  Seq2Seq.cpp  Seq2Seq.hpp  TextGenerator.cpp  TextGenerator.hpp  TorchDawn.cpp  TorchDawn.hpp
src/model/: BUILD
src/model/imageClassifier/: BUILD
src/model/seq2seq/: BUILD
src/service/: BUILD  ImageClassifier.cpp  ImageClassifier.hpp  SequenceToSequence.cpp  SequenceToSequence.hpp
src/utils/: BUILD  BigInteger.cpp  BigInteger.hpp  Image.cpp  Image.hpp  ImageUtils.cpp  ImageUtils.hpp  Logger.cpp  Logger.hpp  OpenCvUtils.cpp  OpenCvUtils.hpp  PytorchUtils.cpp  PytorchUtils.hpp  String.cpp  String.hpp  StringUtils.cpp  StringUtils.hpp
test/: CMakeLists.txt  Test  main.cpp
test/utils/: BigInteger.cpp  StringUtils.cpp
(+28 files in other folders)
